--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,96 +8,120 @@
     tools:context=".fragment.ProfileFragment">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="210dp"
-        android:layout_height="210dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
 
         android:layout_gravity="center"
-        app:cardBackgroundColor="@color/colorPrimary"
-        app:cardCornerRadius="105dp"
-
-        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            app:cardCornerRadius="100dp">
-
-            <ImageView
-                android:id="@+id/profilePicture"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:src="@drawable/doggi_target" />
-
-        </androidx.cardview.widget.CardView>
-
-    </androidx.cardview.widget.CardView>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/editButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:src="@drawable/ic_edit"
-        app:backgroundTint="@color/floatingActionButton"
-        app:fabSize="normal"
-        app:elevation="6dp"
-
-        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintHorizontal_bias="0.7"
-        app:layout_constraintVertical_bias="0.8" />
-
-    <TextView
-        android:id="@+id/artistName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="Artist Name"
-        android:textColor="@android:color/white"
-        android:textSize="20dp"
-
-        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline0" />
-
-    <TextView
-        android:id="@+id/contactInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="Contact information"
-        android:textColor="@android:color/white"
-        android:textSize="20dp"
+        android:layout_margin="35dp"
+        app:cardBackgroundColor="@color/cardBackground"
+        app:cardCornerRadius="50dp"
+        app:cardElevation="10dp"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline1" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <!--  GUIDELINES  -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/horizontalGuideline0"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".5" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="170dp"
+                android:layout_height="170dp"
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/horizontalGuideline1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".8" />
+                android:layout_gravity="center"
+                app:cardBackgroundColor="@color/colorPrimary"
+                app:cardCornerRadius="85dp"
 
+                app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:layout_gravity="center"
+
+                    app:cardCornerRadius="80dp">
+
+                    <ImageView
+                        android:id="@+id/profilePicture"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:src="@drawable/doggi_target" />
+
+                </androidx.cardview.widget.CardView>
+
+            </androidx.cardview.widget.CardView>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/editButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:src="@drawable/ic_edit"
+                app:backgroundTint="@color/floatingActionButton"
+                app:elevation="6dp"
+                app:fabSize="normal"
+
+                app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.7"
+                app:layout_constraintStart_toStartOf="parent"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.8" />
+
+            <TextView
+                android:id="@+id/artistName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="Artist Name"
+                android:textColor="@android:color/white"
+                android:textSize="20dp"
+                app:layout_constraintVertical_bias="0.1"
+
+                app:layout_constraintBottom_toTopOf="@id/horizontalGuideline1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/horizontalGuideline0" />
+
+            <TextView
+                android:id="@+id/contactInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="Contact information"
+                android:textColor="@android:color/white"
+                android:textSize="20dp"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/horizontalGuideline1" />
+
+            <!--  GUIDELINES  -->
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/horizontalGuideline0"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent=".45" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/horizontalGuideline1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent=".85" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
