--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
 
     <color name="whitesmoke">#f5f5f5</color>
     <color name="floatingActionButton">#7F5CBD</color>
+    <color name="cardBackground">#2C2C2C</color>
 </resources>
