--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
 
         android:layout_gravity="center"
-        android:layout_margin="35dp"
+        android:layout_margin="50dp"
         app:cardBackgroundColor="@color/cardBackground"
         app:cardCornerRadius="50dp"
         app:cardElevation="5dp"
@@ -25,36 +25,27 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/ic_pattern_background">
+            android:background="@color/cardBackground">
 
             <androidx.cardview.widget.CardView
-                android:layout_width="170dp"
-                android:layout_height="170dp"
+                android:id="@+id/cardView"
+                android:layout_width="160dp"
+                android:layout_height="160dp"
 
                 android:layout_gravity="center"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="85dp"
 
+                app:cardCornerRadius="80dp"
                 app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="160dp"
-                    android:layout_height="160dp"
+                <ImageView
+                    android:id="@+id/profilePicture"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
-
-                    app:cardCornerRadius="80dp">
-
-                    <ImageView
-                        android:id="@+id/profilePicture"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:src="@drawable/doggi_target" />
-
-                </androidx.cardview.widget.CardView>
+                    android:src="@drawable/doggi_target" />
 
             </androidx.cardview.widget.CardView>
 
@@ -64,43 +55,40 @@
                 android:layout_height="wrap_content"
 
                 android:src="@drawable/ic_edit"
-                app:backgroundTint="@color/floatingActionButton"
+                app:backgroundTint="@color/colorPrimary"
                 app:elevation="6dp"
                 app:fabSize="normal"
 
-                app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.7"
-                app:layout_constraintStart_toStartOf="parent"
 
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.8" />
+                app:layout_constraintBottom_toBottomOf="@+id/cardView"
+                app:layout_constraintEnd_toEndOf="@+id/cardView" />
 
             <TextView
                 android:id="@+id/artistName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
+                android:fontFamily="@font/staatliches"
                 android:text="Artist Name"
+                android:textAllCaps="true"
                 android:textColor="@color/whitesmoke"
                 android:textSize="30dp"
-                android:fontFamily="@font/staatliches"
 
-                app:layout_constraintVertical_bias="0.1"
                 app:layout_constraintBottom_toTopOf="@id/horizontalGuideline1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/horizontalGuideline0" />
+                app:layout_constraintTop_toBottomOf="@id/horizontalGuideline0"
+                app:layout_constraintVertical_bias="0.1" />
 
             <TextView
                 android:id="@+id/contactInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
+                android:fontFamily="@font/staatliches"
                 android:text="Contact information"
                 android:textColor="@color/whitesmoke"
                 android:textSize="25dp"
-                android:fontFamily="@font/staatliches"
 
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
