--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -47,6 +47,7 @@
                 android:src="@drawable/ic_edit"
                 app:backgroundTint="@color/colorPrimary"
                 app:elevation="6dp"
+                app:fabSize="mini"
 
                 app:layout_constraintBottom_toBottomOf="@+id/profilePicture"
                 app:layout_constraintEnd_toEndOf="@+id/profilePicture" />
