--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -128,8 +128,23 @@
                 android:orientation="vertical"
                 app:layout_constraintGuide_percent=".8" />
 
+            <ProgressBar
+                android:id="@+id/profileProgressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:indeterminateTintMode="src_atop"
+                android:indeterminateTint="@color/colorBackground"
+                android:visibility="gone"
+                android:elevation="60dp"
+                app:layout_constraintStart_toStartOf="@id/editButton"
+                app:layout_constraintEnd_toEndOf="@id/editButton"
+                app:layout_constraintTop_toTopOf="@id/editButton"
+                app:layout_constraintBottom_toBottomOf="@id/editButton" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
