--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -29,22 +29,23 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/circleImageView"
                 android:layout_width="0dp"
-
                 android:layout_height="0dp"
-                android:layout_margin="16dp"
 
+                android:layout_margin="16dp"
                 android:src="@drawable/doggi_target"
+
                 app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline0"
                 app:layout_constraintEnd_toEndOf="@id/verticalGuideline0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
+                android:id="@+id/playButton"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
 
-                android:src="@drawable/ic_play"
                 android:layout_margin="10dp"
+                android:src="@drawable/ic_play"
 
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/verticalGuideline1"
@@ -52,11 +53,12 @@
                 app:layout_constraintTop_toTopOf="@+id/horizontalGuideline0" />
 
             <ImageView
+                android:id="@+id/favoriteButton"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
 
-                android:src="@drawable/ic_star_border"
                 android:layout_margin="10dp"
+                android:src="@drawable/ic_star_border"
 
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/verticalGuideline0"
@@ -64,10 +66,11 @@
                 app:layout_constraintTop_toTopOf="@+id/horizontalGuideline0" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/artistFlare"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:orientation="vertical"
 
+                android:orientation="vertical"
                 android:background="@drawable/pattern_background"
 
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -76,6 +79,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
+                    android:id="@+id/songTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
@@ -84,13 +88,27 @@
                     android:textColor="@color/whitesmoke"
                     android:textSize="32dp"
 
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline1"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/songOptions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:text="&#8942;"
+                    android:textSize="35dp"
+                    android:textColor="@color/whitesmoke"
+
+                    app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/verticalGuideline2"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/artists"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
@@ -98,11 +116,10 @@
                     android:fontFamily="@font/staatliches"
                     android:gravity="center"
                     android:maxWidth="180dp"
-
                     android:text="Artist Name &amp; Artist Name"
-
                     android:textColor="@color/whitesmoke"
                     android:textSize="24dp"
+
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -114,6 +131,13 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
                     app:layout_constraintGuide_percent="0.5" />
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/verticalGuideline2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.8" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
