--- a/app/src/main/res/drawable/ic_play.xml
+++ b/app/src/main/res/drawable/ic_play.xml
@@ -1,10 +1,9 @@
 <vector android:height="24dp"
-    android:tint="#FFFFFF"
     android:viewportHeight="24"
     android:viewportWidth="24"
     android:width="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <path
-        android:fillColor="@color/whitesmoke"
+        android:fillColor="@color/colorBackground"
         android:pathData="M8,5v14l11,-7z" />
 </vector>
