--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -31,8 +31,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
 
-                android:minHeight="100dp"
-
                 android:layout_margin="12dp"
                 android:src="@drawable/doggi_target"
 
@@ -59,7 +57,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
-                android:orientation="vertical"
                 android:background="@drawable/pattern_background"
 
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -67,53 +64,89 @@
                 app:layout_constraintStart_toStartOf="@+id/verticalGuideline0"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
-                    android:id="@+id/songTitle"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
 
-                    android:fontFamily="@font/staatliches"
-                    android:text="Untitled"
-                    android:textColor="@color/whitesmoke"
-                    android:textSize="28dp"
-                    android:layout_marginTop="20dp"
-
-                    app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline1"
-                    app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/artists"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:layout_weight="0.3"
-                    android:fontFamily="@font/staatliches"
-                    android:gravity="center"
-                    android:maxWidth="180dp"
-                    android:text="Artist Name &amp; Artist Name"
-                    android:textColor="@color/whitesmoke"
-                    android:textSize="20dp"
-                    android:layout_marginBottom="20dp"
+                    android:orientation="vertical"
 
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/horizontalGuideline1" />
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/songTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
+                        android:fontFamily="@font/roboto_medium"
+                        android:text="Untitled"
+                        android:textColor="@color/whitesmoke"
+                        android:textSize="20dp"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/artists"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
+                        android:fontFamily="@font/roboto_regular"
+                        android:text="Artist Name &amp; Artist Name"
+                        android:textColor="@color/whitesmoke"
+                        android:textSize="16dp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/songProgress"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+
+                            android:fontFamily="@font/roboto_light"
+                            android:text="Producing..."
+                            android:textColor="@color/whitesmoke"
+                            android:textSize="16dp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
 
                 <ImageView
                     android:id="@+id/favoriteButton"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
 
-                    android:layout_margin="8dp"
+                    android:layout_margin="12dp"
+                    android:minWidth="24dp"
+                    android:minHeight="24dp"
                     android:src="@drawable/ic_star_border"
 
-                    app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline1"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@id/verticalGuideline2"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_margin="12dp"
+                    android:minWidth="24dp"
+                    android:minHeight="24dp"
+                    android:src="@drawable/ic_navigate_next"
+                    android:drawableEnd="@drawable/ic_navigate_next"
+
+                    android:fontFamily="@font/roboto_italic"
+                    android:text="Yesterday"
+                    android:textColor="@color/whitesmoke"
+                    android:textSize="16dp"
+
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/horizontalGuideline1"
@@ -138,14 +171,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.35" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/verticalGuideline1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.175" />
+                app:layout_constraintGuide_percent="0.3" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
