--- a/app/src/main/res/menu/menu_friends.xml
+++ b/app/src/main/res/menu/menu_friends.xml
@@ -1,2 +1,12 @@
-<menu xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.sachinreddy.feature.activity.AuthActivity"></menu>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.sachinreddy.feature.activity.AuthActivity">
+    <item
+        android:id="@+id/search_friends"
+        android:orderInCategory="100"
+        android:title="Search Friends"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView" />
+</menu>
