added artist items to recyclerView

--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -17,6 +17,6 @@
         tools:itemCount="3"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp"
-        tools:listitem="@layout/item_song" />
+        tools:listitem="@layout/item_artist" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
