--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,8 +8,8 @@
         android:title="@string/action_start_collab"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_add_artist"
+        android:id="@+id/action_solo_session"
         android:orderInCategory="100"
-        android:title="@string/action_add_artist"
+        android:title="@string/start_solo_session"
         app:showAsAction="never" />
 </menu>
