--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -36,7 +36,7 @@
     <!--  INPUT FIELDS  -->
 
     <EditText
-        android:id="@+id/inputEmail"
+        android:id="@+id/inputUsername"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
@@ -81,7 +81,7 @@
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
+        app:layout_constraintTop_toBottomOf="@+id/inputUsername"
         app:layout_constraintBottom_toTopOf="@id/buttonLogin" />
 
     <Button
