--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -62,6 +62,20 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ProgressBar
+                android:id="@+id/profileProgressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:elevation="60dp"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/colorBackground"
+                android:indeterminateTintMode="src_atop"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@id/editButton"
+                app:layout_constraintEnd_toEndOf="@id/editButton"
+                app:layout_constraintStart_toStartOf="@id/editButton"
+                app:layout_constraintTop_toTopOf="@id/editButton" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
@@ -69,7 +83,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         app:cardBackgroundColor="@color/cardBackground"
@@ -113,7 +127,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/contactInfo"
+                        android:id="@+id/username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
@@ -140,23 +154,5 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
-
-    <!--  GUIDELINES  -->
-
-
-    <ProgressBar
-        android:id="@+id/profileProgressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="60dp"
-        android:indeterminate="true"
-        android:indeterminateTint="@color/colorBackground"
-        android:indeterminateTintMode="src_atop"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/editButton"
-        app:layout_constraintEnd_toEndOf="@id/editButton"
-        app:layout_constraintStart_toStartOf="@id/editButton"
-        app:layout_constraintTop_toTopOf="@id/editButton" />
-
 
 </LinearLayout>
