--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -58,6 +58,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/horizontalGuideline1"
+        app:layout_constraintBottom_toTopOf="@id/username" />
+
+    <EditText
+        android:id="@+id/username"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+
+        android:background="@drawable/round_border"
+        android:drawableStart="@drawable/ic_person"
+        android:drawablePadding="16dp"
+        android:padding="16dp"
+
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="text"
+        android:textColor="@color/colorAccent"
+        android:textColorHint="@color/colorAccent"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/artistName"
         app:layout_constraintBottom_toTopOf="@id/inputEmail" />
 
     <EditText
@@ -80,30 +103,7 @@
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/artistName"
-        app:layout_constraintBottom_toTopOf="@id/phoneNumber" />
-
-    <EditText
-        android:id="@+id/phoneNumber"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-
-        android:background="@drawable/round_border"
-        android:drawableStart="@drawable/ic_phone"
-        android:drawablePadding="16dp"
-        android:padding="16dp"
-
-        android:ems="10"
-        android:hint="@string/phone_number"
-        android:inputType="text"
-        android:textColor="@color/colorAccent"
-        android:textColorHint="@color/colorAccent"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
+        app:layout_constraintTop_toBottomOf="@+id/username"
         app:layout_constraintBottom_toTopOf="@id/inputPassword" />
 
     <EditText
@@ -126,7 +126,7 @@
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
+        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
         app:layout_constraintBottom_toTopOf="@id/confirmPassword" />
 
     <EditText
