--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -88,15 +88,44 @@
 
                         />
 
-                    <TextView
-                        android:id="@+id/artistEmail"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-                        android:fontFamily="@font/roboto_regular"
-                        android:text="travisscott@gmail.com"
-                        android:textColor="@color/whitesmoke"
-                        android:textSize="16dp" />
+                        <TextView
+                            android:id="@+id/username"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+
+                            android:fontFamily="@font/roboto_light"
+                            android:text="username"
+                            android:textColor="@color/whitesmoke"
+                            android:textSize="16dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+
+                            android:paddingHorizontal="8dp"
+                            android:fontFamily="@font/roboto_light"
+                            android:text="•"
+                            android:textColor="@color/whitesmoke"
+                            android:textSize="16dp" />
+
+                        <TextView
+                            android:id="@+id/score"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+
+                            android:textAlignment="textEnd"
+
+                            android:fontFamily="@font/roboto_light"
+                            android:text="325"
+                            android:textColor="@color/whitesmoke"
+                            android:textSize="16dp" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
